# binder-trace

./: .gitignore  Cargo.toml  LICENSE  LICENSE-Linux-syscall-note  LICENSE-MIT  README.en.md  README.md
.devcontainer/a12-5.10/: devcontainer.json
.devcontainer/a13-5.15/: devcontainer.json
.devcontainer/a14-6.1/: devcontainer.json
.devcontainer/a15-6.6/: devcontainer.json  docker-compose.yml
.github/workflows/: android-userspace.yml  ci.yaml  ddk-lkm.yml  release.yml
android/: push.sh  run-root.sh
crates/bt-agent/: Cargo.toml
crates/bt-agent/src/: agent.rs  capture_history.rs  config.rs  device.rs  diagnostic.rs  error.rs  kernel_config.rs  lib.rs  socket_ipc.rs
crates/bt-agent/tests/: agent.rs
crates/bt-cli/: Cargo.toml
crates/bt-cli/src/: main.rs  startup_marker.rs  tui.rs  tui_history.rs
crates/bt-cli/src/tui/: i18n.rs  input.rs  mod.rs  render.rs  text.rs  theme.rs
crates/bt-cli/src/tui/locales/: en-US.json  ja-JP.json  zh-CN.json
crates/bt-common/: Cargo.toml
crates/bt-common/src/: constants.rs  device.rs  event.rs  kind.rs  lib.rs
crates/bt-decoder/: Cargo.toml  build.rs
crates/bt-decoder/data/: android_platform_methods.tsv
crates/bt-decoder/src/: android_platform.rs  android_platform_methods.rs  config.rs  decoder.rs  error.rs  event.rs  lib.rs
crates/bt-decoder/tests/: platform_methods_resource.rs
crates/bt-ebpf/: Cargo.toml
crates/bt-ebpf/src/: lib.rs
crates/bt-mcp/: Cargo.toml
crates/bt-mcp/src/: error.rs  lib.rs  server.rs
crates/bt-storage/: Cargo.toml
crates/bt-storage/src/: error.rs  event.rs  jsonl.rs  lib.rs
crates/bt-storage/src/jsonl/: record.rs
crates/bt-web/: Cargo.toml
crates/bt-web/src/: lib.rs
crates/bt-webui/: Cargo.toml  build.rs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
crates/bt-webui/rust/: events.rs  lib.rs
crates/bt-webui/src/: main.tsx
crates/bt-webui/src/app/: App.tsx
crates/bt-webui/src/components/: CopyButton.tsx  DetailPanel.tsx  EventTable.tsx  FilterBar.tsx  StatusBar.tsx  Toolbar.tsx  icons.tsx  tokens.tsx
crates/bt-webui/src/domain/: hexview.ts  index.ts  record.ts  select.ts  trace.ts
crates/bt-webui/src/hooks/: useTableKeyboard.ts  useTraceStream.ts
crates/bt-webui/src/i18n/: index.ts  locale.ts  types.ts  useI18n.ts
crates/bt-webui/src/i18n/locales/: en-US.ts  index.ts  zh-CN.ts
crates/bt-webui/src/styles/: global.css
docs/: development-guidelines.md  fallback-design.md  technical-selection.md
kernel/: .gitignore  Makefile  README.md  envsetup.sh
kernel/scripts/: build-ddk.sh  generate_compdb.py  insmod_ko.sh
kernel/src/core/: bt_capture.c  bt_capture.h  bt_common.h  bt_hooks.c  bt_hooks.h  bt_main.c  bt_symbols.c  bt_symbols.h
kernel/src/hook/: hijack_arm64.c  hijack_arm64.h  inline_hook.c  inline_hook.h
kernel/src/ipc/: bt_control.c  bt_control.h  bt_event.c  bt_event.h  bt_ipc_uapi.h  bt_protocol.c  bt_protocol.h  bt_sock.c  bt_sock.h
kernel/src/utils/: bt_kallsyms.c  bt_mem.c  bt_module.c  bt_pgtable.c  bt_utils.h
xtask/: Cargo.toml
xtask/src/: main.rs
