[workspace]
members = [
    "xtask",
    "crates/bt-common",
    "crates/bt-agent",
    "crates/bt-decoder",
    "crates/bt-storage",
    "crates/bt-mcp",
    "crates/bt-cli",
    "crates/bt-webui",
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
