[package]
name = "bt-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "binder-trace"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.14"
bt-agent = { path = "../bt-agent" }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2.186"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
