[package]
name = "bt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "binder-trace"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.14"
bt-agent = { path = "../bt-agent" }
bt-decoder = { path = "../bt-decoder" }
bt-webui = { path = "../bt-webui" }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
libc = "0.2.186"
memmap2 = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", default-features = false, features = ["rt", "time", "net", "macros"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
zerocopy = { version = "0.8.52", features = ["derive"] }
