[package]
name = "bt-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "bt_mcp"

[dependencies]
axum = "0.8.9"
bt-agent = { path = "../bt-agent" }
bt-decoder = { path = "../bt-decoder" }
rmcp = { version = "1.7.0", default-features = false, features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "io-std", "time", "net"] }
