[package]
name = "bt-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "bt_storage"

[dependencies]
bt-decoder = { path = "../bt-decoder" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
bt-common = { path = "../bt-common" }
